done with get all users api
